# mattemodel

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.env.example  fetch-model.sh  mattemodel.service  mattemodel.sh
client/: mattemodel.py  mattemodel.sh
install/include/matte/: matte_rvm.hpp
install/lib/cmake/matte/: matteConfig-release.cmake  matteConfig.cmake
src/: matte_engine.hpp  matte_engine_ncnn.cpp  matte_engine_ort.cpp  matte_rvm.cpp  server.cpp
